# anima

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  LICENSE  pyproject.toml
alembic/: script.py.mako
alembic/versions/: 20260302_0001_create_sessions_table.py
apps/admin/: package.json  pnpm-lock.yaml
backend/: pyproject.toml
backend/alembic/: env.py
docs/: Anima 后端基础架构设计.md  Anima 图谱记忆面设计架构文档 (Graph Architecture Reference).md  Anima 泛实体决策模型架构设计文档.md  Anima 泛实体生命周期与架构设计文档.md  Animation技术架构.md  Anima决策模型设计架构.md  Anima后端规范.md  Anima客户端设计方案.md  Anima接口文档.md  Anima数据库迁移（Alembic）.md  Anima概念提案.md  Anima管理面板设计文档.md  DESIGN.md  FRONTEND.md  PLANS.md  PRODUCT_SENSE.md  QUALITY_SCORE.md  README.md  RELIABILITY.md  SECURITY.md  index.md
docs/archive/: Anima 图谱记忆面设计架构文档 (Graph Architecture Reference).md  Anima 泛实体决策模型架构设计文档.md  Anima 泛实体生命周期与架构设计文档.md  Animation技术架构.md  README.md
docs/design-docs/: api-contract.md  backend-spec.md  core-beliefs.md  index.md  legacy-backend-foundation.md  legacy-documents.md  postgres-migrations.md
docs/exec-plans/: index.md  tech-debt-tracker.md
docs/plans/: 2026-03-06-context-v2-domain-neutral-design.md  2026-03-06-context-v2-domain-neutral-implementation.md  2026-03-06-event-verb-domain-filter-design.md  2026-03-06-event-verb-domain-filter.md  2026-03-06-session-actions-contract.md  2026-03-07-remove-board-target-type-design.md  2026-03-07-remove-board-target-type.md  2026-03-07-session-actions-verb-and-schema-only-design.md  2026-03-07-session-actions-verb-and-schema-only.md  2026-03-07-session-target-constraints-design.md  2026-03-07-session-target-constraints.md
docs/product-specs/: admin-console-spec.md  entity-client-spec.md  index.md  product-vision.md
docs/references/: alembic-llms.txt  fastapi-llms.txt  index.md  mongo-motor-llms.txt  neo4j-async-llms.txt  redis-llms.txt  (+1 more)
src/: main.py
src/core/: config.py  (+1 more)
(+191 files in other folders)
